--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <p>Prácticas, acogedoras, nobles. De contrucción tradicional, se caracterizan por su diseño y
                         amplitud de sus ambientes. Redireccionadas para atrapar los mejores momentos de luz solar y
                         dispuestas frente a la piscina común para compartir grandes momentos. </p>
-                    <img src="./Img/Nosotros_4.jpg" alt="">
+                    <img src="./Img/nosotros_4.jpg" alt="">
                 </div>
             </article>
             <article>
@@ -210,7 +210,7 @@
                         Quae corrupti ratione harum ducimus atque, nostrum eius nulla consequatur voluptas consequuntur
                         dicta, dolorum expedita pariatur. Id ea, at alias et, architecto beatae impedit ab minima
                         voluptates dignissimos mollitia quibusdam?</p>
-                    <img src="./Img/Nosotros_2.jpg" alt="">
+                    <img src="./Img/nosotros_2.jpg" alt="">
                 </div>
             </article>
         </section>
@@ -227,11 +227,11 @@
             <h4>Seguinos</h4>
             <nav>
                 <ul class="footer__info__link">
-                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="./iconos/Instagram.png" alt="">
+                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="./Iconos/Instagram.png" alt="">
                     </li>
-                    <li><a target="_blank" href="https://www.facebook.com"><img src="./iconos/Facebook.png" alt=""></a>
+                    <li><a target="_blank" href="https://www.facebook.com"><img src="./Iconos/Facebook.png" alt=""></a>
                     </li>
-                    <li> <a target="_blank" href="https://twitter.com/"><img src="./iconos/Twitter.png" alt=""></a></li>
+                    <li> <a target="_blank" href="https://twitter.com/"><img src="./Iconos/Twitter.png" alt=""></a></li>
                 </ul>
             </nav>
         </div>
