--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -141,7 +141,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/Bungalows_4.jpg" alt="cabaña4">
+                    <img src="../Img/bungalows_4.jpg" alt="cabaña4">
                 </div>
             </article>
             <article class="suite">
@@ -157,7 +157,7 @@
                             Terraza exterior con parrilla y sector para mesa.</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img class="atardecer" src="../Img/Bungalows-5.jpg" alt="cabaña5">
+                    <img class="atardecer" src="../Img/bungalows_5.jpg" alt="cabaña5">
                 </div>
             </article>
             <article>
@@ -205,11 +205,11 @@
             <h4>Seguinos</h4>
             <nav>
                 <ul>
-                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="../iconos/Instagram.png" alt="">
+                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="../Iconos/Instagram.png" alt="">
                     </li>
-                    <li><a target="_blank" href="https://www.facebook.com"><img src="../iconos/Facebook.png" alt=""></a>
+                    <li><a target="_blank" href="https://www.facebook.com"><img src="../Iconos/Facebook.png" alt=""></a>
                     </li>
-                    <li> <a target="_blank" href="https://twitter.com/"><img src="../iconos/Twitter.png" alt=""></a>
+                    <li> <a target="_blank" href="https://twitter.com/"><img src="../Iconos/Twitter.png" alt=""></a>
                     </li>
                 </ul>
             </nav>
