--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -17,7 +17,7 @@
     <header>
         <div class="barraNavegacion">
             <a href="#">
-                <img src="../Iconos/logo-2.png" alt="Logo Moxy">
+                <img src="../Iconos/logo_2.png" alt="Logo Moxy">
             </a>
             <h1>Moxy</h1>
         </div>
@@ -130,11 +130,11 @@
             <h4>Seguinos</h4>
             <nav>
                 <ul class="footer footer__info__link">
-                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="../iconos/Instagram.png" alt="">
+                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="../Iconos/Instagram.png" alt="">
                     </li>
-                    <li><a target="_blank" href="https://www.facebook.com"><img src="../iconos/Facebook.png" alt=""></a>
+                    <li><a target="_blank" href="https://www.facebook.com"><img src="../Iconos/Facebook.png" alt=""></a>
                     </li>
-                    <li> <a target="_blank" href="https://twitter.com/"><img src="../iconos/Twitter.png" alt=""></a>
+                    <li> <a target="_blank" href="https://twitter.com/"><img src="../Iconos/Twitter.png" alt=""></a>
                     </li>
                 </ul>
             </nav>
