--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -35,8 +35,8 @@
     <hr>
 
     <main id="tarifasPromos">
-        <section id="tarifas">
-            <div>
+        <section>
+            <div class="tarifas">
                 <h1>TARIFAS</h1>
                 <p>Precios de lista mes en curso</p>
             </div>
@@ -83,12 +83,12 @@
                         disponibilidad)</p>
                     <hr>
                     <p>Para mas consultas TEL:223-9123456 Todos los dias de 9 a 20 Hs.</p>
-                    <img src="../img/tarifas_booking.png" alt="booking">
+                    <img src="../Img/tarifas_booking.png" alt="booking">
                     <p>Si ya realizó la compra, contactenos al: 223-9123456</p>
                 </div>
             </article>
         </section>
-        <section id="promos">
+        <section>
             <div>
                 <h3>¡PROMOCIONES!</h3>
             </div>
