avance tercera entrega

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="En las coordeanas ideales para disfrutar de la placidez y el esparcimiento, situadas en el espetacular marco del valle de Tafi, Cabañas Moxy es la opcion ideal para vos!.">
+    <meta name="keywords" content="VIAJES, VACACIONES, CABAÑAS, RELAX, MOTANAÑAS, PAISAJE, CERROS">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Moxy</title>
+    <title>Moxy - Cabañas - Confort - Relax_y_mas</title>
 </head>
 
 <body>
@@ -55,73 +58,22 @@
                 </article>
                 <article>
                     <div class="portada">
-                        <h3>Ejemplo</h3>
+                        <h3>El Complejo</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi ex ducimus
-                            dolores
-                            sed
-                            esse
-                            quas iure omnis incidunt quo nisi, exercitationem illo recusandae dolorum fuga quod adipisci
-                            impedit
-                            explicabo!
-                            Pariatur blanditiis amet commodi, dolore doloremque, cumque officia totam odit dicta placeat
-                            esse
-                            vel
-                            molestiae aliquid rerum atque! Nam quos, sapiente id voluptas possimus totam explicabo quod
-                            dolorum
-                            quia
-                            non!
-                            Velit in eos suscipit qui sunt, molestiae quisquam et exercitationem quo sequi impedit
-                            dolores,
-                            error
-                            esse odio dicta harum deleniti hic quidem nobis inventore blanditiis laudantium ratione.
-                            Voluptate,
-                            ipsam minus.
-                            Repudiandae a facilis dolorem, architecto corporis asperiores cupiditate et repellat
-                            necessitatibus
-                            cumque dolore eveniet sequi earum quasi distinctio illo provident fugiat commodi natus
-                            similique
-                            numquam
-                            modi? Placeat dolorum obcaecati laudantium?
-                            Qui id mollitia natus, dignissimos nihil consequatur numquam ducimus perferendis iusto
-                            inventore.
-                            Commodi quaerat explicabo ipsa libero similique! Eius, autem! Doloribus, commodi dolores
-                            quibusdam
-                            quos
-                            est quam dicta aut quaerat!
-                            In cumque sit repellendus debitis unde aliquid non possimus quis dolorem vitae voluptatem
-                            labore
-                            impedit
-                            officiis numquam, distinctio a, nisi expedita iure sunt vero! Optio hic molestias dolorem
-                            quod
-                            mollitia.
-                            Minus, perferendis. Quidem tempore amet praesentium iste ducimus dolores, suscipit dolore
-                            porro
-                            cumque
-                            repellendus! Quidem consectetur magni fugiat repellat nobis esse. Ipsa minus quasi
-                            consectetur
-                            sunt
-                            consequuntur cumque aperiam saepe.
-                            Eum beatae at veritatis ad porro doloribus alias quod nostrum quasi facere incidunt atque
-                            laborum,
-                            harum
-                            ipsa, adipisci magni iste. Laborum temporibus eius consequatur molestias magnam distinctio
-                            suscipit
-                            perferendis nihil?
-                            Eligendi ducimus officia asperiores, sit tenetur repellendus debitis deleniti hic, magni
-                            corporis
-                            nihil
-                            voluptate facilis in incidunt, perspiciatis fugiat fugit dicta error! Distinctio placeat,
-                            velit
-                            id
-                            blanditiis praesentium provident. Ducimus!
-                            Vitae facere, dolores, asperiores alias nisi cum deserunt harum illum consectetur animi,
-                            dolore
-                            omnis
-                            assumenda! Itaque, neque? Quam vel dolorem dolores molestiae perferendis, inventore esse
-                            voluptatum
-                            illo
-                            velit a ex?
+                            Verde, natural, auténtico. Potrerillos, el valle que se convirtió en la zona emblemática de
+                            Tafi para descansar entre las montañas.
+                            Visitar Potrerillos es descubrir una dimensión atrapada por la armonía de los colores. Es
+                            sentir y experimentar el bienestar que emerge de tanta
+                            belleza.
+                            La diversidad de sus paisajes sorprende y la
+                            posibilidad de actividades recreativas lo transforman en ese destino para quienes buscan
+                            respirar aire puro y vivir una aventura de vacaciones.
+                            Andino, salvaje, cercano. Potrerillos, es uno de los pocos lugares turísticos que conservó
+                            su esencia con el paso de los años, convirtiéndose en la plaza más elegida.
+                            Potrerillos conquista con su geografía y enamora con la simpleza de su gente que recibe con
+                            calidez a todos sus visitantes. Es de esos destinos que no buscan maquillar sus rincones,
+                            que se mantiene inalterable a la contaminación ambiental, a plena vista en su vegetación, y
+                            de su gran embalse de agua dulce.
                         </p>
                     </div>
                 </article>
@@ -160,7 +112,8 @@
                     Cabañas,
                     cuya
                     filosofía conjuga experiencia, profesionalismo y vocación de servicio.
-
+                </p>
+                <p>
                     Cabañas Moxy cuenta con alojamiento, cada una con capacidad para 6 personas. La
                     disposición de las cabañas preserva vistas privilegiadas desde todos los puntos y propone la
                     privacidad
@@ -179,37 +132,43 @@
             </div>
             <article>
                 <div class="cabaña1">
-                    <p>Cómodas, funcionales, cálidas. Cabañas equipadas con todo lo necesario para sentirte como en
-                        casa. Diseñadas con la funcionalidad perfecta para adaptarse a todo tipo de descanso. En sus
-                        estructuras de cabañas típicas se priorizó la coherencia con el paisaje que conecta al interior
-                        de todas las unidades a través de ventanales. El estacionamiento y parrilla propios favorecen la
-                        privacidad propuesta por el complejo mientras que las galerías permiten convivir con los
-                        espacios comunes. El sistema de calefacción, la limpieza y el cuidado de las instalaciones
-                        refuerzan el concepto de una atención personalizada y de que un buen alojamiento es aquel que
-                        integra simpleza, confort y buen gusto.</p>
-                    <p>Prácticas, acogedoras, nobles. De contrucción tradicional, se caracterizan por su diseño y
-                        amplitud de sus ambientes. Redireccionadas para atrapar los mejores momentos de luz solar y
-                        dispuestas frente a la piscina común para compartir grandes momentos. </p>
+                    <div class="descripcionCabaña">
+                        <p>
+                            Cómodas, funcionales, cálidas. Cabañas equipadas con todo lo necesario para sentirte como en
+                            casa. Diseñadas con la funcionalidad perfecta para adaptarse a todo tipo de descanso. En sus
+                            estructuras de cabañas típicas se priorizó la coherencia con el paisaje que conecta al
+                            interior de todas las unidades a través de ventanales. El estacionamiento y parrilla propios
+                            favorecen la privacidad propuesta por el complejo mientras que las galerías permiten
+                            convivir con los espacios comunes. El sistema de calefacción, la limpieza y el cuidado de
+                            las instalaciones refuerzan el concepto de una atención personalizada y de que un buen
+                            alojamiento es aquel que integra simpleza, confort y buen gusto.
+                        </p>
+                        <p> Prácticas, acogedoras, nobles. De contrucción tradicional, se caracterizan por su diseño y
+                            amplitud de sus ambientes. Redireccionadas para atrapar los mejores momentos de luz solar y
+                            dispuestas frente a la piscina común para compartir grandes momentos.</p>
+                    </div>
                     <img src="./Img/nosotros_4.jpg" alt="">
                 </div>
             </article>
             <article>
                 <div class="cabaña2">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias eveniet commodi odio fugit, magni
-                        at, possimus iusto soluta optio ut atque nemo facere, fugiat inventore fuga aspernatur placeat
-                        ducimus necessitatibus.
-                        Dolores doloribus soluta modi repellendus animi, consequuntur eveniet dolorem accusantium ipsa
-                        molestiae, suscipit aspernatur enim, magnam fuga. Iure, in vero magnam labore consequatur
-                        doloremque maxime soluta, quaerat temporibus facilis incidunt!
-                        Nihil molestias quam id dolorem, dolorum laborum assumenda rem ratione sed similique nemo
-                        voluptate hic excepturi ipsam. Sunt accusantium modi voluptates! Nemo ipsam delectus porro velit
-                        numquam! Consectetur, modi quaerat!
-                        Praesentium mollitia aliquid et repellendus eius, nesciunt nemo, eum ullam, itaque autem
-                        deserunt rerum consequuntur recusandae. Voluptate quae, cum animi eos, voluptatibus aspernatur
-                        impedit eligendi quod suscipit facere nostrum dolor?
-                        Quae corrupti ratione harum ducimus atque, nostrum eius nulla consequatur voluptas consequuntur
-                        dicta, dolorum expedita pariatur. Id ea, at alias et, architecto beatae impedit ab minima
-                        voluptates dignissimos mollitia quibusdam?</p>
+                    <div class="descripcionCabaña">
+                        <p>
+                            Cabañas Moxy cuenta con 10 unidades de alojamiento, cada una con capacidad para 6
+                            personas. La disposición de las cabañas preserva vistas privilegiadas desde todos los puntos
+                            y propone la privacidad necesaria para cada huésped.
+                        </p>
+                        <p>
+                            El complejo cuenta con piscina, juegos para niños y espacios comunes para el
+                            entretenimiento. La seguridad, dispuesta como servicio diferencial, promete una estadía sin
+                            inconvenientes.
+                        </p>
+                        <p>
+                            Familiar, privado, seguro. Destacado como un alojamiento reconocido en la zona, Cabañas
+                            Moxy, sostiene, a través de los años, la capacidad de asistir a los turistas con un
+                            servicio direccionado a cada necesidad y expectativa.
+                        </p>
+                    </div>
                     <img src="./Img/nosotros_2.jpg" alt="">
                 </div>
             </article>
