--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -75,7 +75,7 @@
         </section>
         <section>
             <div class="Habitaciones">
-                <h2>Bungalows</h2>
+                <h2 id="bunga">Bungalows</h2>
                 <p>Bungalows familiares de 3 a 5 personas</p>
                 <hr>
             </div>
