--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -37,62 +37,52 @@
     <main id="tarifasPromos">
         <section>
             <div class="tarifas">
-                <h1>TARIFAS</h1>
-                <p>Precios de lista mes en curso</p>
+                <h2>TARIFAS</h2>
+                <p>Precios de lista mes en curso:</p>
             </div>
             <article class="cotizacion">
                 <div>
-                    <h4>Suite Matrimonial</h4>
+                    <h4><u>Suite Matrimonial</u></h4>
                     <p>Precio de lista por noche $39.900</p>
-                    <a href="./habitaciones.html">AMPLIAR INFO</a>
+                    <a href="./habitaciones.html"><u>AMPLIAR INFO</u></a>
                 </div>
                 <div>
-                    <h4>Suite Matrimonial Plus</h4>
+                    <h4><u>Suite Matrimonial Plus</u></h4>
                     <p>Precio de lista por noche $44.900</p>
-                    <a href="./habitaciones.html">AMPLIAR INFO</a>
+                    <a href="./habitaciones.html"><u>AMPLIAR INFO</u></a>
                 </div>
                 <div>
-                    <h4>Bungalow familiar</h4>
+                    <h4><u>Bungalow familiar</u></h4>
                     <p>Precio de lista por noche $59.900 p/3 personas</p>
                     <p>Precio de lista por noche $69.900 p/4 personas</p>
-                    <a href="./habitaciones.html">AMPLIAR INFO</a>
+                    <a href="./habitaciones.html"><u>AMPLIAR INFO</u></a>
                 </div>
             </article>
-            <div>
-                <h4>Ropa de cama y toallas:</h4>
+            <div class="ropa">
+                <h3>Ropa de cama y toallas:</h3>
             </div>
-            <article>
+            <article class="infoRopa">
                 <div>
                     <p>Las unidades se entregan listas con las camas tendidas y sus correspondientes sabanas,almohadas y
                         cobertores.</p>
                     <p>Las sabanas se recambian cada 3 / 4 dias segun la totalidad de estadia. Estos recambios estan
                         incluidos en la tarifa. Si solicita recambios adicionales tiene costo adicional.</p>
                 </div>
-                <div>
-                    <h3>LISTA DE PRECIOS RECAMBIOS ADICIONALES</h3>
-                    <div>
-                        <li>Toalla de mano $400</li>
-                        <li>Toallon $500</li>
-                        <li>Recambio de sabanas $700</li>
-                    </div>
+                <div class="ropa">
+                    <h4>LISTA DE PRECIOS RECAMBIOS ADICIONALES</h4>
                 </div>
-            </article>
-            <article>
                 <div>
-                    <p>HORARIOS DE ESTADIA: de 14 a 10am - Consulte opcion por estadia prolongada (sujeto a
-                        disponibilidad)</p>
-                    <hr>
-                    <p>Para mas consultas TEL:223-9123456 Todos los dias de 9 a 20 Hs.</p>
-                    <img src="../Img/tarifas_booking.png" alt="booking">
-                    <p>Si ya realizó la compra, contactenos al: 223-9123456</p>
+                    <li>Toalla de mano $400</li>
+                    <li>Toallon $500</li>
+                    <li>Recambio de sabanas $700</li>
                 </div>
             </article>
         </section>
         <section>
-            <div>
-                <h3>¡PROMOCIONES!</h3>
+            <div class="tituloPromo">
+                <h3><u>¡PROMOCIONES!</u></h3>
             </div>
-            <article>
+            <article class="promociones">
                 <div>
                     <h4>VERANO 2024</h4>
                     <p>Preventa a precio de lista actual para el verano 2024.
@@ -102,7 +92,7 @@
                 </div>
                 <div>
                     <h4>PAGOS CON TARJETA</h4>
-                    <p>6 CUOTAS Para tarjetas Visa y Mastercard de Bnaco Nacios. Otras tarjetas 3 cuotas.
+                    <p><span>6 CUOTAS</span> Para tarjetas Visa y Mastercard de Bnaco Nacios. Otras tarjetas 3 cuotas.
                         Adiciona 10% de interes. Aplica sobre precio de lista mes en curso.
                     </p>
                 </div>
@@ -110,9 +100,18 @@
                     <h4>MONEDAS DE PAGO ALTERNATIVAS</h4>
                     <p>Peso Chileno,Reales,Dolares,Euros. Transferencia por PayPal o Binance</p>
                 </div>
-                <div>
-                    <h3>SI NO APROVECHAS ESTAS PROMOS ¡ESTAS PERDIENDO PLATA!</h3>
-                </div>
+                <article class="aprovecha">
+                    <h4>SI NO APROVECHAS ESTAS PROMOS ¡ESTAS PERDIENDO PLATA!</h4>
+                </article>
+                <article class="horarios">
+                    <div class="booking">
+                        <p>HORARIOS DE ESTADIA: de 14 a 10am - Consulte opcion por estadia prolongada (sujeto a
+                            disponibilidad)</p>
+                        <p>Para mas consultas TEL:223-9123456 Todos los dias de 9 a 20 Hs.</p>
+                        <img src="../Img/tarifas_booking.png" alt="booking">
+                        <p>Si ya realizó la compra, contactenos al: 223-9123456</p>
+                    </div>
+                </article>
             </article>
         </section>
     </main>
